--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Тестовое задание</title>
 </head>
-<body>
+<body class="page=body">
     <header>
 
     </header>
-    <main>
-        <h1 class="visuaaly-hidden">Окно лицензии</h1>
+    <main class="page-main">
+        <h1 class="visually-hidden">Окно лицензии</h1>        
         <form class="license-form" action="#" method="POST">
             <div class="input-wrapper">
-                <label for="license-plan-1">License plan #1</label>
-                <input class="license-form__input-radio" type="radio" name="license-plan" id="license-plan-1" value="13">
-                <span>$13 per licenses</span>
+                <input class="visually-hidden license-form__input-radio" type="radio" name="license-plan" id="license-plan-1" value="13">
+                <label class="license-form__label" for="license-plan-1">License plan #1</label>                
+                <span>$13 per license</span>
             </div>
             <div class="input-wrapper">
-                <label for="license-plan-2">License plan #2</label>
-                <input class="license-form__input-radio" type="radio" name="license-plan" id="license-plan-2" value="22">
-                <span>$22 per licenses</span>
+                <input class="visually-hidden license-form__input-radio" type="radio" name="license-plan" id="license-plan-2" value="22">
+                <label class="license-form__label" for="license-plan-2">License plan #2</label>                
+                <span>$22 per license</span>
             </div>
             <div class="input-wrapper">
-                <label for="license-plan-3">License plan #3</label>
-                <input class="license-form__input-radio" type="radio" name="license-plan" id="license-plan-3" value="34">
-                <span>$34 per licenses</span>
+                <input class="visually-hidden license-form__input-radio" type="radio" name="license-plan" id="license-plan-3" value="34" checked>
+                <label class="license-form__label" for="license-plan-3">License plan #3</label>    
+                <span>$34 per license</span>                          
             </div>
             <div class="select-wrapper">
                 <label for="license-number">Number of licenses</label>
                 <select name="license-number" id="license-number">
-                    <option value="1"></option>
-                    <option value="2"></option>
-                    <option value="3"></option>
-                    <option value="4"></option>
-                    <option value="5"></option>
-                    <option value="6"></option>
-                    <option value="7"></option>
-                    <option value="8"></option>
-                    <option value="9"></option>
-                    <option value="10"></option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
                 </select>    
             </div>           
-            <p class="total">Total:<span class="total__value"></span></p>
-            <button type="submit">Buy Now</button>
-            <p class="selected-plan">Selected plan: <span class="selected-plan__value">#3</span></p>
+            <p class="total">Total: <span>$</span><span class="total__value">340</span></p>
+            <button class="license-form__button" type="submit">Buy now</button>
+            <p class="selected-plan">Selected plan: #<span class="selected-plan__value">3</span></p>
         </form>
 
     </main>
